--- a/index.html
+++ b/index.html
@@ -4,25 +4,25 @@
 	<meta charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="CSS/Inicio.css"/> 
 	<title>Division Group</title>
-	<link rel="icon" href="html/img/DivisionGroup.png"/>
+	<link rel="icon" href="HTML/img/DivisionGroup.png"/>
 </head>
 <body>
-	<div class="sup Logo"><img src="html/img/DivisionGroup.png" width="55px" height="55px"></div>
+	<div class="sup Logo"><img src="HTML/img/DivisionGroup.png" width="55px" height="55px"></div>
 	<div class="sup Izq"><p></p>DIVISION GROUP</div>
-	<div class="sup Der"><a href="https://www.google.com/"><img src="html/img/instagram.png" width="45px" height="45px"></a>
-						 <a href="#"><img src="html/img/twitter.png" width="45px" height="40px"></a>
-						 <a href="#"><img src="html/img/gmail.png" width="45px" height="45px"></a></div>
+	<div class="sup Der"><a href="https://www.google.com/"><img src="HTML/img/instagram.png" width="45px" height="45px"></a>
+						 <a href="#"><img src="HTML/img/twitter.png" width="45px" height="40px"></a>
+						 <a href="#"><img src="HTML/img/gmail.png" width="45px" height="45px"></a></div>
 	<div class="general">
 		<div class="centroIzq">BUSCAN</div>
 		<div class="centro">DO NUEVOS HO</div>
 		<div class="centroDer">RIZONTES</div>
 		
-		<a href="html/servicios.html"><div class="centroInf" style="clear: both; floar: left; display: block; position: relative;">SERVICIOS</div></a>
+		<a href="HTML/Servicios.html"><div class="centroInf" style="clear: both; floar: left; display: block; position: relative;">SERVICIOS</div></a>
 		
-		<a href="html/QuienesSomos.html"><div class="inf1">QUIENES SOMOS</div></a>
-		<a href="html/instalaciones.html"><div class="inf2">INSTALACIONES</div></a>
-		<a href="html/testimonios.html"><div class="inf3">TESTIMONIOS</div></a>
-		<a href="html/ContactoComoLlegar.html"><div class="inf4" >CONTACTO COMO LLEGAR</div></a>
+		<a href="HTML/QuienesSomos.html"><div class="inf1">QUIENES SOMOS</div></a>
+		<a href="HTML/instalaciones.html"><div class="inf2">INSTALACIONES</div></a>
+		<a href="HTML/testimonios.html"><div class="inf3">TESTIMONIOS</div></a>
+		<a href="HTML/ContactoComoLlegar.html"><div class="inf4" >CONTACTO COMO LLEGAR</div></a>
 				
 		<!-- <hr color="grey" style="margin-bottom: 100px";/> -->
 
